SERVER-73645 Capture exceptions when executing BalancerCommandSchedulerImpl::_submit()